momdification css bouton connecter

--- a/index.html
+++ b/index.html
@@ -96,8 +96,10 @@
   <div style="margin-left: 900px;background:#fff;width:300px;height:700px;">
 
 
+<div style="background:#fff;height:20px;">
+</div>
 
-  <div style="background-color: #9f785f;color:#fff;">Se connecter</div>
+  <div style="text-align: center;margin-left:140px;width:140px;border-radius:6px;background-color: #9f785f;color:#fff;">Se connecter</div>
 
 
   </div>
