--- a/contact_form/index.html
+++ b/contact_form/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Contact V17</title>
+	<title>Form</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 <!--===============================================================================================-->
@@ -26,101 +26,116 @@
 	<link rel="stylesheet" type="text/css" href="css/util.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 <!--===============================================================================================-->
+
+
+	<script src="https://kit.fontawesome.com/e1924a5c8f.js" crossorigin="anonymous"></script>
 </head>
+<style>
+
+.bordure:hover{
+	transition:0.6s;
+	border:2px solid #fff;
+}
+</style>
 <body>
 
 
-	<div class="container-contact100">
+	<div style="background-color:#000000;"class="container-contact100">
 		<div class="wrap-contact100">
-			<form class="contact100-form validate-form">
+			<form class="contact100-form validate-form" action="../index.html">
 				<span class="contact100-form-title">
-					Send Us A Message
+					Inscription
 				</span>
 
-				<label class="label-input100" for="first-name">Tell us your name *</label>
+				<label class="label-input100" for="first-name">Entrez vos coordonnées</label>
 				<div class="wrap-input100 rs1-wrap-input100 validate-input" data-validate="Type first name">
-					<input id="first-name" class="input100" type="text" name="first-name" placeholder="First name">
+					<input id="first-name" class="input100" type="text" name="first-name" placeholder="Nom">
 					<span class="focus-input100"></span>
 				</div>
 				<div class="wrap-input100 rs2-wrap-input100 validate-input" data-validate="Type last name">
-					<input class="input100" type="text" name="last-name" placeholder="Last name">
+					<input class="input100" type="text" name="last-name" placeholder="Prenom">
 					<span class="focus-input100"></span>
 				</div>
 
-				<label class="label-input100" for="email">Enter your email *</label>
+				<label class="label-input100" for="email">Entrez votre mail</label>
 				<div class="wrap-input100 validate-input" data-validate = "Valid email is required: ex@abc.xyz">
 					<input id="email" class="input100" type="text" name="email" placeholder="Eg. example@email.com">
 					<span class="focus-input100"></span>
 				</div>
 
-				<label class="label-input100" for="phone">Enter phone number</label>
-				<div class="wrap-input100">
-					<input id="phone" class="input100" type="text" name="phone" placeholder="Eg. +1 800 000000">
+
+				<label class="label-input100" for="email">Entrez votre Adresse</label>
+				<div class="wrap-input100 validate-input" data-validate = "Valid email is required: ex@abc.xyz">
+					<input id="email" class="input100" type="text" name="email" placeholder="Adresse">
 					<span class="focus-input100"></span>
 				</div>
 
-				<label class="label-input100" for="message">Message *</label>
-				<div class="wrap-input100 validate-input" data-validate = "Message is required">
-					<textarea id="message" class="input100" name="message" placeholder="Write us a message"></textarea>
+
+				<label class="label-input100" for="phone">Entrez votre téléphone</label>
+				<div class="wrap-input100">
+					<input id="phone" class="input100" type="text" name="phone" placeholder="Téléphone">
+					<span class="focus-input100"></span>
+				</div>
+
+				<label class="label-input100" for="message">Mot de passe</label>
+				<div class="wrap-input100">
+					<input id="phone" class="input100" type="text" name="password" placeholder="Mot de passe">
 					<span class="focus-input100"></span>
 				</div>
 
 				<div class="container-contact100-form-btn">
 					<button class="contact100-form-btn">
-						Send Message
+						Inscription
 					</button>
 				</div>
 			</form>
 
-			<div class="contact100-more flex-col-c-m" style="background-image: url('images/bg-01.jpg');">
+			<div class="contact100-more flex-col-c-m" style="background-image: url('images/dressing.webp');">
+	<div class="bordure"style="border-radius: 15px;width:530px;background-color:#000000;">
 				<div class="flex-w size1 p-b-47">
+
 					<div class="txt1 p-r-25">
-						<span class="lnr lnr-map-marker"></span>
+
 					</div>
 
-					<div class="flex-col size2">
-						<span class="txt1 p-b-20">
-							Address
+					<div style="margin-top:50px;margin-left:100px;"class="flex-col size2">
+
+		<span  style="font-family: Poppins-Regular;
+    font-size: 18px;
+    color:#fff;"><i class="fas fa-map-pin"></i>	Adresse</br></span>
+						<span style="color:#9f785f;"class="txt2">
+							Centre de lavage Clean & Go
 						</span>
 
-						<span class="txt2">
-							Mada Center 8th floor, 379 Hudson St, New York, NY 10018 US
+					</div>
+
+
+				<div class="dis-flex size1 p-b-47">
+
+
+					<div style="margin-left:100px;"class="flex-col size2">
+						<span class="txt1 p-b-20">
+					<i class="fas fa-phone"></i>	Numéro </br>
+						<p style="color:#9f785f;font-size:18px;">	+33 1 80 01 23 68</p>
 						</span>
+
+
 					</div>
 				</div>
 
-				<div class="dis-flex size1 p-b-47">
-					<div class="txt1 p-r-25">
-						<span class="lnr lnr-phone-handset"></span>
-					</div>
+				<div style="margin-top:-60px;margin-left:100px;" class="dis-flex size1 p-b-47">
 
 					<div class="flex-col size2">
 						<span class="txt1 p-b-20">
-							Lets Talk
-						</span>
-
-						<span class="txt3">
-							+1 800 1236879
+				<i class="fas fa-envelope-square"></i>		Contact </br>
+						<p style="color:#9f785f;font-size:18px;">contact@clean&go_france.com </p>
 						</span>
 					</div>
 				</div>
-
-				<div class="dis-flex size1 p-b-47">
-					<div class="txt1 p-r-25">
-						<span class="lnr lnr-envelope"></span>
-					</div>
-
-					<div class="flex-col size2">
-						<span class="txt1 p-b-20">
-							General Support
-						</span>
-
-						<span class="txt3">
-							contact@example.com
-						</span>
-					</div>
+				</div>
 				</div>
 			</div>
+
 		</div>
 	</div>
 
