--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Elit Photography&mdash; Onepage Website Template by Colorlib</title>
+    <title>Clean & GO</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -23,9 +23,13 @@
     <link rel="stylesheet" href="css/fancybox.min.css">
 
     <link rel="stylesheet" href="css/style.css">
-
+ 	<script src="https://kit.fontawesome.com/e1924a5c8f.js" crossorigin="anonymous"></script>
     <script>
-
+function text(){
+  document.getElementById("plus").remove();
+document.getElementById("text").innerHTML = "Un site et une application pour prendre soin de votre temps libre et de votre linge. En quelques clics, choisissez l’offre qui correspond à votre besoin et deux rendez-vous plus tard, il ne vous reste plus qu’à le ranger dans l’armoire.";
+document.getElementById("text2").innerHTML = "Notre projet consiste à mettre en place un service de récupération de vêtements, tenues de cérémonies et linges de maison sales. Nous les déposons chez notre partenaire puis nous le ramenons lavés, repassés et/ou pliés selon le choix de l’utilisateur. L’application est programmable sur la date comme sur l’horaire.";
+}
   function verif(){
     document.getElementById("msg").style.color = "#000000";
     document.getElementById("msg").style.backgroundColor = "#9f785f";
@@ -36,6 +40,9 @@
     </script>
 <style>
 
+body{
+    overflow-x : hidden;
+}
 .btn-primar {
   color: #fff;
   background-color: #9f785f;
@@ -95,6 +102,7 @@
         <li><a style="color:#000000;"  href="#section-blog" class="nav-link">Fonctionnement</a></li>
         <li><a style="color:#000000;"  href="#section-bio" class="nav-link">Histoire</a></li>
         <li><a  style="color:#000000;" href="#section-contact" class="nav-link">Assistance</a></li>
+              <li><a  style="color:#000000;" href="localisation.html" class="nav-link">Localisations</a></li>
       </ul>
       <ul class="social js-clone-nav">
         <li><a href="#"><span class="icon-facebook"></span></a></li>
@@ -151,196 +159,23 @@
 
       </section>
 
-    <div class="container-fluid">
-
-
-
-
       <section class="row align-items-stretch photos" id="section-photos">
-        <div class="col-12">
-        <div class="row align-items-stretch">
-
-        <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up">
-          <a href="images/img_4.jpg" class="d-block photo-item" data-fancybox="gallery">
-            <img src="images/img_4.jpg" alt="Image" class="img-fluid">
-            <div class="photo-text-more">
-              <span class="icon icon-search"></span>
-            </div>
-          </a>
-        </div>
-        <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="100">
-          <a href="images/img_5.jpg" class="d-block photo-item" data-fancybox="gallery">
-            <img src="images/img_5.jpg" alt="Image" class="img-fluid">
-            <div class="photo-text-more">
-              <span class="icon icon-search"></span>
-            </div>
-          </a>
-        </div>
-        <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="200">
-          <a href="images/img_1.jpg" class="d-block photo-item" data-fancybox="gallery">
-            <img src="images/img_1.jpg" alt="Image" class="img-fluid">
-            <div class="photo-text-more">
-              <span class="icon icon-search"></span>
-            </div>
-          </a>
-        </div>
-
-        <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up">
-          <a href="images/img_2.jpg" class="d-block photo-item" data-fancybox="gallery">
-            <img src="images/img_2.jpg" alt="Image" class="img-fluid">
-            <div class="photo-text-more">
-              <span class="icon icon-search"></span>
-            </div>
-          </a>
-        </div>
-        <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="100">
-          <a href="images/img_3.jpg" class="d-block photo-item" data-fancybox="gallery">
-            <img src="images/img_3.jpg" alt="Image" class="img-fluid">
-            <div class="photo-text-more">
-              <span class="icon icon-search"></span>
-            </div>
-          </a>
-        </div>
-        <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="200">
-          <a href="images/img_6.jpg" class="d-block photo-item" data-fancybox="gallery">
-            <img src="images/img_6.jpg" alt="Image" class="img-fluid">
-            <div class="photo-text-more">
-              <span class="icon icon-search"></span>
-            </div>
-          </a>
-        </div>
-
-        <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up">
-          <a href="images/img_7.jpg" class="d-block photo-item" data-fancybox="gallery">
-            <img src="images/img_7.jpg" alt="Image" class="img-fluid">
-            <div class="photo-text-more">
-              <span class="icon icon-search"></span>
-            </div>
-          </a>
-        </div>
-        <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="100">
-          <a href="images/img_8.jpg" class="d-block photo-item" data-fancybox="gallery">
-            <img src="images/img_8.jpg" alt="Image" class="img-fluid">
-            <div class="photo-text-more">
-              <span class="icon icon-search"></span>
-            </div>
-          </a>
-        </div>
-        <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="200">
-          <a href="images/img_9.jpg" class="d-block photo-item" data-fancybox="gallery">
-            <img src="images/img_9.jpg" alt="Image" class="img-fluid">
-            <div class="photo-text-more">
-              <span class="icon icon-search"></span>
-            </div>
-          </a>
-        </div>
-
-
-        <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up">
-          <a href="images/img_10.jpg" class="d-block photo-item" data-fancybox="gallery">
-            <img src="images/img_10.jpg" alt="Image" class="img-fluid">
-            <div class="photo-text-more">
-              <span class="icon icon-search"></span>
-            </div>
-          </a>
-        </div>
-        <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="100">
-          <a href="images/img_1.jpg" class="d-block photo-item" data-fancybox="gallery">
-            <img src="images/img_1.jpg" alt="Image" class="img-fluid">
-            <div class="photo-text-more">
-              <span class="icon icon-search"></span>
-            </div>
-          </a>
-        </div>
-        <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="200">
-          <a href="images/img_2.jpg" class="d-block photo-item" data-fancybox="gallery">
-            <img src="images/img_2.jpg" alt="Image" class="img-fluid">
-            <div class="photo-text-more">
-              <span class="icon icon-search"></span>
-            </div>
-          </a>
-        </div>
-
-        <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up">
-          <a href="images/img_3.jpg" class="d-block photo-item" data-fancybox="gallery">
-            <img src="images/img_3.jpg" alt="Image" class="img-fluid">
-            <div class="photo-text-more">
-              <span class="icon icon-search"></span>
-            </div>
-          </a>
-        </div>
-        <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="100">
-          <a href="images/img_4.jpg" class="d-block photo-item" data-fancybox="gallery">
-            <img src="images/img_4.jpg" alt="Image" class="img-fluid">
-            <div class="photo-text-more">
-              <span class="icon icon-search"></span>
-            </div>
-          </a>
-        </div>
-        <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="200">
-          <a href="images/img_5.jpg" class="d-block photo-item" data-fancybox="gallery">
-            <img src="images/img_5.jpg" alt="Image" class="img-fluid">
-            <div class="photo-text-more">
-              <span class="icon icon-search"></span>
-            </div>
-          </a>
-        </div>
-
-        <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up">
-          <a href="images/img_6.jpg" class="d-block photo-item" data-fancybox="gallery">
-            <img src="images/img_6.jpg" alt="Image" class="img-fluid">
-            <div class="photo-text-more">
-              <span class="icon icon-search"></span>
-            </div>
-          </a>
-        </div>
-        <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="100">
-          <a href="images/img_7.jpg" class="d-block photo-item" data-fancybox="gallery">
-            <img src="images/img_7.jpg" alt="Image" class="img-fluid">
-            <div class="photo-text-more">
-              <span class="icon icon-search"></span>
-            </div>
-          </a>
-        </div>
-        <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="200">
-          <a href="images/img_8.jpg" class="d-block photo-item" data-fancybox="gallery">
-            <img src="images/img_8.jpg" alt="Image" class="img-fluid">
-            <div class="photo-text-more">
-              <span class="icon icon-search"></span>
-            </div>
-          </a>
-        </div>
-
-        <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="100">
-          <a href="images/img_9.jpg" class="d-block photo-item" data-fancybox="gallery">
-            <img src="images/img_9.jpg" alt="Image" class="img-fluid">
-            <div class="photo-text-more">
-              <span class="icon icon-search"></span>
-            </div>
-          </a>
-        </div>
-        <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="100">
-          <a href="images/img_4.jpg" class="d-block photo-item" data-fancybox="gallery">
-            <img src="images/img_4.jpg" alt="Image" class="img-fluid">
-            <div class="photo-text-more">
-              <span class="icon icon-search"></span>
-            </div>
-          </a>
-        </div>
-        <div class="col-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="200">
-          <a href="images/img_5.jpg" class="d-block photo-item" data-fancybox="gallery">
-            <img src="images/img_5.jpg" alt="Image" class="img-fluid">
-            <div class="photo-text-more">
-              <span class="icon icon-search"></span>
-            </div>
-          </a>
-        </div>
-
-
-
-      </div>
+        <div style="margin-top: 50px;color:#000000;font-size:40px;margin-left:400px;">
+      Nos Engagements
 
     </div>
+    <i style="font-size: 200px;margin-left:-600px ;margin-top:200px;color:#9f785f;" class="fas fa-tint"></i>
+<i style="color:#000000;font-size: 50px;margin-top:290px;margin-left:-100px;"class="fas fa-hand-sparkles"></i>
+  <i style="font-size: 200px;margin-left:100px ;margin-top:200px;color:#000000;" class="fas fa-tint"></i>
+<i  style="color:#9f785f;font-size: 50px;margin-left:-90px ;margin-top:290px;"class="fas fa-stopwatch"></i>
+    <i style="font-size: 200px;margin-left:190px ;margin-top:200px;color:#9f785f;" class="fas fa-tint"></i>
+    <i style="font-size: 50px;margin-left:-85px;margin-top:290px ;color:#000000;"class="far fa-smile"></i>
+    <i style="font-size: 200px;margin-left:900px ;margin-top:-200px;color:#000000;" class="fas fa-tint"></i>
+    <i style="font-size: 50px;margin-left:-90px ;margin-top:-110px;color:#9f785f;" class="fas fa-handshake"></i>
+<p style="font-size:20px;margin-top: 50px;margin-left:170px ;color:#000000;">Propreté<p>
+  <p style="font-size:20px;margin-top: 50px;margin-left:120px ;color:#000000;">Ponctualité<p>
+    <p style="font-size:20px;margin-top: 50px;margin-left:110px ;color:#000000;">Satisfaction Client<p>
+      <p style="font-size:20px;margin-top: 50px;margin-left:90px ;color:#000000;">Service client réactif<p>
       </section> <!-- #section-photos -->
 
       <section class="site-section" id="section-testimonial">
@@ -387,15 +222,17 @@
         <div class="container">
           <div class="row justify-content-center">
             <div class="col-md-8">
-              <h2 class="heading text-uppercase text-white">Biography</h2>
-              <figure class="mb-5" data-aos="fade-up"><img src="images/person_3.jpg" alt="Image" class="img-fluid w-50 rounded"></figure>
+              <h2 class="heading text-uppercase text-white">Histoire</h2>
               <div data-aos="fade-up"  data-aos-delay="100">
-              <h2 class="text-white">Hi I'm Jed</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor aperiam a velit. Harum eligendi quod reiciendis quos ullam libero est dolor, <a href="#">corporis dolores assumenda</a>, delectus, quidem voluptatibus dolorum temporibus enim!</p>
-              <p>Neque facilis soluta, accusantium quaerat, adipisci porro animi, hic fugiat id vero placeat dolorem accusamus sapiente odio consequatur debitis beatae eius quos alias. In recusandae magnam quis ipsum, asperiores mollitia!</p>
-              <h3 class="text-white mt-5">Photographer for 10 years</h3>
-              <p>Tempore repudiandae <a href="#">rerum numquam iste</a>, quibusdam omnis voluptates quaerat veniam neque odit sit vel dolores. Optio eveniet ex laborum similique inventore sapiente tenetur. Ipsam aliquam esse voluptate qui reiciendis. Harum.</p>
-              <div class="d-block d-md-flex mt-5">
+                <p style="color:#fff;">
+                  A quoi peuvent bien servir tous les progrès technologiques accomplies depuis plus de deux siècles si nos tâches quotidiennes non pas réellement changées.
+Pourquoi ne pourraient-elles pas simplement disparaître ? Le temps vous fait défaut et vous aimeriez pouvoir accorder plus de temps à ce qui vous importe vraiment ?
+Nous vous proposons de répondre à vos problématiques de temps, de place et de moyens en un service. Penser et conçu pour ceux qui en ont vraiment besoin.
+<input style="background:none;border:none;color:#9f785f;"type="button" id="plus" value="En savoir plus..." onclick="text()"></input>
+<p id="text" style="color:#fff;"></p>
+<p id="text2" style="color:#fff;"></p>
+                </p>
+          <!--     <div class="d-block d-md-flex mt-5">
                 <div class="mr-md-auto mr-2">
                   <ul class="ul-check list-unstyled success">
                     <li>Optio eveniet ex laborum</li>
@@ -403,7 +240,7 @@
                     <li>Ipsam aliquam esse</li>
                   </ul>
                 </div>
-                <div class="mr-md-auto">
+               <div class="mr-md-auto">
                   <ul class="ul-check list-unstyled success">
                     <li>Optio eveniet ex laborum</li>
                     <li>Inventore sapiente tenetur</li>
@@ -411,7 +248,7 @@
                   </ul>
                 </div>
 
-              </div>
+              </div>--->
               </div>
             </div>
           </div>
@@ -533,12 +370,39 @@
           </div>
         </div>
       </section>
+      <footer style="margin-left:-80px;background-color:#9f785f;width:1300px;height:200px;">
+<div style="height:5px;"></div>
+        <div style="margin-left:100px;margin-top:2px;border:0.5px solid #fff; width:1150px;"></div>
+
+        <div style="border:2px solid #9f785f;color:#fff;border-radius:8px;margin-left:910px;width:150px;height:50px;background-color:#000000;">
+  <i style="font-size:16px;margin-left:-800px;color:#000000;"class="fab fa-instagram"></i>
+  <i style="font-size:16px;margin-left:20px;color:#000000;" class="fab fa-facebook-f"></i>
+  <i style="font-size:16px;margin-left:25px;color:#000000;" class="fab fa-cc-visa"></i>
+<i style="font-size:16px;margin-left:30px;color:#000000;"class="fab fa-cc-paypal"></i>
+<i  style="font-size:16px;margin-left:35px;color:#000000;" class="fab fa-paypal"></i>
+<i  style="font-size:16px;margin-left:40px;color:#000000;" class="fab fa-cc-mastercard"></i>
+
+
+          <a style="color:white;" href="https://www.apple.com/fr/ios/app-store/"><img style="margin-left:540px;margin-top:0px;"src="images/apple_2.png"></img><p style="margin-left:50px;margin-top:-40px;font-size:10px;">Télécharger dans</p></br> <p style='margin-top:-50px;margin-left:50px;'>l'App Store</p></a></div>
+        <div style="margin-top:-50px;border:2px solid #9f785f;color:#fff;border-radius:8px;margin-left:1070px;width:150px;height:50px;background-color:#000000;"><a style="color:white;" href="https://play.google.com/store?gl=FR&utm_source=emea_Med&utm_medium=hasem&utm_content=Dec2019&utm_campaign=Evergreen&pcampaignid=MKT-DR-emea-fr-1001280-Med-hasem-py-Evergreen-Dec2019-Text_Search_BKWS%7cONSEM_kwid_43700008792247580&gref=EkQKPAoICPC9m_QFEDwSLAAP1PZV66KGj7rguS11bxIuyxGtNY920oz-MAUiB0y-T-GDJg18lyNaaKkkGgLLFhAC8P8HARjj9tyaAw&gclid=CjwKCAjwvZv0BRA8EiwAD9T2Veuiho-64LktdW8SLssRrTWPdtKM_jAFIgdMvk_hgyYNfJcjWmipJBoCyxYQAvD_BwE&gclsrc=aw.ds"><img style="margin-top:5px;"src="images/google_play_2.png"></img><p style="font-size:10px;margin-top:-40px;margin-left:40px;">Disponible sur</p></br> <p style='margin-top:-50px;margin-left:40px;'>Google play</p></a></div>
+
+        <div style="margin-left:100px;margin-bottom:100px;border:0.5px solid #fff; width:1150px;"></div>
+<h3 style="color:#fff;margin-left:100px;margin-top:-100px;">A propos </h3>
+<p style="color:#fff;margin-left:100px;">Condition Générales de ventes</p>
+<p style="color:#fff;margin-left:100px;margin-top:-10px;">Données personnelles</p>
+<p style="color:#fff;margin-left:100px;margin-top:-10px;">Avis Clean & Go </p>
+<h3 style="color:#fff;margin-left:500px;margin-top:-150px;">Informations </h3>
+<p style="color:#fff;margin-left:500px;">Histoire</p>
+<p style="color:#fff;margin-left:500px;margin-top:-10px;">+33 (0) 684 440 071</p>
+<p style="color:#fff;margin-left:500px;margin-top:-10px;">contact@clean_go_france.com </p>
+<h3 style="color:#fff;margin-left:840px;margin-top:-150px;">Nos partenaires </h3>
+      </footer>
 
       <div class="row justify-content-center">
         <div class="col-md-12 text-center py-5">
           <p>
             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-            Copyright &copy;<script>document.write(new Date().getFullYear());</script> Tous les droits réservés <i class="icon-heart text-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank" >Sextius Sullivan </a>
+            Copyright &copy;<script>document.write(new Date().getFullYear());</script> Tous les droits réservés <i class="icon-heart text-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" style="color:#9f785f;"target="_blank" >Sextius Sullivan </a>
             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
             </p>
         </div>
@@ -546,7 +410,10 @@
     </div>
   </main>
 
-</div> <!-- .site-wrap -->
+</div>
+
+ <!-- .site-wrap -->
+
 
   <script src="js/jquery-3.3.1.min.js"></script>
   <script src="js/jquery-migrate-3.0.1.min.js"></script>
